doing test and resolve bugs